# aycer_image

./: Cargo.toml  example_manifest.toml
src/: codegen.rs  main.rs  manifest.rs
src/templates/: animated_image.tem  header.tem  image.tem
